--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,19 @@
                     <mainClass>fr.insa.schmitt.ps2.inter.MainFx</mainClass>
                 </configuration>
             </plugin>
-            </plugins>
+        </plugins>
+            <resources>
+                <resource>
+                    <directory>src/main/java</directory>
+                    <filtering>false</filtering>
+                    <includes>
+                    <include>**/*.png</include>
+                </includes>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+        </resources>
+            
     </build>
 </project>
